2015-06-26  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/RcppGSLExample/src/colNorm.cpp: Added new version
	based on Attributes
	* inst/examples/RcppGSLExample/src/RcppExports.cpp: Added
	* inst/examples/RcppGSLExample/R/RcppExports.R: Added

	* src/RcppExports.cpp: Updated via newer compileAttributes()

2015-06-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/bSpline/bSpline.cpp (fitData): Removed unneccessary
	instantiation of a data.frame object

2015-01-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.4

2015-01-22  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppGSL-intro.Rnw: Updated to note that package turns off
	GSL error when loaded via .onAttach().

2015-01-14  Dirk Eddelbuettel  <edd@debian.org>

	* src/setErrorHandler.cpp: Add two simple functions to turn off the
	GSL error handler (which is recommended), and to reset to the default
	value if so desired. Note that under the default value GSL will abort
	on error which is not desirable when called from R.

	* R/init.R (.onAttach): Call the new gslSetErrorHandler() function

2015-01-13  Qiang Kou <qkou@umail.iu.edu>

	* vignettes/RcppGSL-intro.Rnw: Add section about setting default
	error in GSL per http://thread.gmane.org/gmane.comp.lang.r.rcpp/7905

2015-01-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.3

2015-01-09  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppGSL-intro.Rnw: Small update for look&feel, also
	updated regarding configure variables

2015-01-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars.in: One char correction requested by CRAN Maintainers

	* configure.ac: Updated and shortened
	* configure: Ditto

2014-05-31  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION: Version 0.2.2

	* inst/NEWS.Rd: Ditto

2014-05-30  Kevin Ushey  <kevinushey@gmail.com>

	* inst/include/RcppGSLForward.h: Take address of private member, not
	variable passed in

2014-05-26  Dirk Eddelbuettel  <edd@debian.org>
